--- a/donasi zahro.html
+++ b/donasi zahro.html
@@ -25,7 +25,7 @@
             <article>
              
               <button class="bottom">
-                <a class="pencet" href="wa.me/6282136408565">KONFIRMASI DONASI</a>
+                <a class="pencet" href="https://wa.me/6282136408565">KONFIRMASI DONASI</a>
               </button>
             </article>
         
