--- a/donasi zahro.html
+++ b/donasi zahro.html
@@ -23,10 +23,11 @@
             <p class="numb">689701026410531</p>
             <p class="an">BRI a.n. Hanifah Qodriyaturrosyidah</p>
             <article>
-             
+
+                <a class="pencet" href="https://wa.me/6282136408565">
               <button class="bottom">
-                <a class="pencet" href="https://wa.me/6282136408565">KONFIRMASI DONASI</a>
-              </button>
+                KONFIRMASI DONASI
+              </button></a>
             </article>
         
         </section>
