--- a/donasi zahro.html
+++ b/donasi zahro.html
@@ -24,7 +24,9 @@
             <img id="gambar" src="kado.png">
             <p class="copy">SALIN NOMOR REKENING DI BAWAH INI:</p>
             <p class="numb">689701026410531</p>
-            <p class="an">BRI a.n. Hanifah Qodriyaturrosyidah</p>
+            <p class="an">BRI a.n. Hanifah Qodriyaturrosyidah<br />atau<p>
+             <p class="numb">7262312229</p>
+            <p class="an">BSI a.n. Saiful Aziz</p>
             <article>
 
                 <a class="pencet" href="https://wa.me/6282136408565">
